--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1,4 +1,48 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:700");
+#sign-in {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: rgba(7, 77, 89, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+#sign-in form {
+  width: 90%;
+  max-width: 400px;
+  text-align: center;
+}
+#sign-in form input {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 7px;
+  padding: 3px 10px;
+  border: 2px solid #0c4383;
+  outline: none;
+}
+#sign-in form a {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 7px;
+  padding: 3px 10px;
+  border: 2px solid #0c4383;
+  outline: none;
+  background-color: #0c4384;
+  color: #fff;
+}
+
 header {
   height: 60px;
   margin: 0;
@@ -29,6 +73,10 @@ header #auth-link button {
   padding: 5px 20px;
   border-radius: 6px;
   font-size: 16px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body,
