--- a/style/_header.scss
+++ b/style/_header.scss
@@ -25,11 +25,23 @@ header {
 		letter-spacing: 1px;
 	}
 	#auth-link {
-		button {
+		a {
 			margin: 0 7px;
 			padding: 5px 20px;
-			border-radius: 6px;
+			border-radius: 4px;
 			font-size: 16px;
+			text-decoration: none;
+			border: 2px solid;
+			color: #fff;
+			letter-spacing: 1px;
+		}
+		#sign-in-btn {
+			background-color: rgb(14, 196, 65);
+			border-color: rgb(14, 196, 65);
+		}
+		#sign-up-btn {
+			background-color: rgb(230, 38, 46);
+			border-color: rgb(230, 38, 46);
 		}
 	}
 }
