--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,8 @@
 @import "_auth";
 @import "_header";
+// ************ Mexins ************
 
+// ************ Styling ************
 * {
 	box-sizing: border-box;
 }
@@ -8,4 +10,26 @@ body,
 html {
 	padding: 0;
 	margin: 0;
+}
+
+section {
+	min-height: calc(100vh - 60px);
+	width: 100vw;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#error-page {
+	h1 {
+		font-size: 120px;
+		font-weight: 700;
+		font-family: "Raleway", sans-serif;
+		line-height: 0;
+	}
+	p {
+		font-size: 30px;
+		margin-top: 0;
+	}
 }
