saving all changes

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:700");
 #sign-in-page {
   min-width: 100vw;
-  min-height: calc(100vh - 60px);
+  min-height: 100vh;
+  padding-top: 50px;
   background-color: rgba(7, 77, 89, 0.4);
   display: flex;
   align-items: center;
-  justify-content: center;
   border: none;
 }
 #sign-in-page form {
@@ -38,6 +38,29 @@
   background-color: #0c4384;
   color: #fff;
 }
+#sign-in-page select {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 7px;
+  padding: 3px 10px;
+  border: 2px solid #0c4383;
+  outline: none;
+}
+#sign-in-page textarea {
+  width: 100%;
+  display: block;
+  margin-bottom: 20px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 7px;
+  padding: 3px 10px;
+  border: 2px solid #0c4383;
+  outline: none;
+  height: 100px;
+}
 
 header {
   height: 60px;
@@ -45,6 +68,11 @@ header {
   padding: 0;
   background-color: #4a5196;
   font-family: "Raleway", sans-serif;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
 }
 header nav {
   max-width: 1200px;
@@ -94,12 +122,15 @@ html {
 }
 
 section {
-  min-height: calc(100vh - 60px);
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
+}
+section #error-msg {
+  margin-bottom: 20px;
+  font-size: 16px;
 }
 
 #error-page h1 {
