--- a/style/_auth.scss
+++ b/style/_auth.scss
@@ -11,11 +11,12 @@
 }
 #sign-in-page {
 	min-width: 100vw;
-	min-height: calc(100vh - 60px);
+	min-height: 100vh;
+	padding-top: 50px;
 	background-color: rgba(7, 77, 89, 0.4);
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	// justify-content: center;
 	border: none;
 
 	form {
@@ -31,5 +32,12 @@
 			background-color: rgb(12, 67, 132);
 			color: #fff;
 		}
+	}
+	select {
+		@include formInputs;
+	}
+	textarea {
+		@include formInputs;
+		height: 100px;
 	}
 }
