saving assets files

--- a/style/style.scss
+++ b/style/style.scss
@@ -18,7 +18,7 @@ section {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	// justify-content: center;
+	justify-content: center;
 
 	#error-msg {
 		margin-bottom: 20px;
