--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -127,6 +127,7 @@ section {
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
 }
 section #error-msg {
   margin-bottom: 20px;
