editing sign in inputs

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -66,7 +66,6 @@ header {
   height: 60px;
   margin: 0;
   padding: 0;
-  background-color: #4a5196;
   font-family: "Raleway", sans-serif;
   position: fixed;
   top: 0;
@@ -91,13 +90,13 @@ header #logo a {
   text-decoration: none;
 }
 header #nav-links {
-  width: 50%;
+  width: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 header #auth-links {
-  width: 30%;
+  width: 40%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -172,3 +171,5 @@ section #error-msg {
   font-size: 30px;
   margin-top: 0;
 }
+
+/*# sourceMappingURL=style.css.map */
