--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -148,6 +148,10 @@ html {
   margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Raleway", sans-serif;
+}
+
 section {
   min-height: 100vh;
   width: 100vw;
