--- a/style/style.scss
+++ b/style/style.scss
@@ -11,7 +11,7 @@ html {
 	padding: 0;
 	margin: 0;
 }
-
+h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif;}
 section {
 	min-height: 100vh;
 	width: 100vw;
