--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway:700");
+// @import url("https://fonts.googleapis.com/css?family=Raleway:700");
 header {
 	height: 60px;
 	margin: 0;
