--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,4 @@
-@import "_auth";
-@import "_header";
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Raleway:700');
 // ************ Mexins ************
 
 // ************ Styling ************
@@ -10,8 +9,13 @@ body,
 html {
 	padding: 0;
 	margin: 0;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif;}
+
+@import "_auth";
+@import "_header";
+
 section {
 	min-height: 100vh;
 	width: 100vw;
