--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -153,6 +153,10 @@ header #auth-links #sign-up-btn {
   border-color: #e6262e;
 }
 
+main {
+  margin-top: 60px;
+}
+
 section {
   min-height: 100vh;
   width: 100vw;
