--- a/style/style.scss
+++ b/style/style.scss
@@ -16,6 +16,10 @@ h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif;}
 @import "_auth";
 @import "_header";
 
+main{
+	margin-top: 60px;
+}
+
 section {
 	min-height: 100vh;
 	width: 100vw;
